# reddsaver

./: .dockerignore  .gitignore  Cargo.toml  Cross.toml  Dockerfile  README.md  jreleaser.yml  reddsaver.xml  rpizerow.Dockerfile  rustfmt.toml
.cargo/: config.toml
.github/workflows/: docker.yml  rust.yml
scripts/: compress_gifs.sh  convert_gifs.sh  download_top_presets.sh  download_user_full_coverage.sh  parse_file.sh
src/: about.rs  auth.rs  download.rs  errors.rs  main.rs  saved.rs  structures.rs  user.rs  utils.rs
