[package]
name = "reddsaver"
version = "0.4.0"
authors = ["Manoj Karthick Selva Kumar <manojkarthick@ymail.com>"]
description = "CLI tool to download saved media from Reddit"
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
homepage = "https://github.com/manojkarthick/reddsaver"
repository = "https://github.com/manojkarthick/reddsaver"
keywords = ["cli", "reddit", "images"]
categories = ["command-line-utilities"]

[dependencies]
reqwest = { version = "0.11.2", features = ["json", "cookies"] }
tokio = { version = "1.21.2", features = ["full"] }
base64 = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
md5 = "0.7.0"
thiserror = "1.0.22"
log = "0.4.11"
env_logger = "0.8.2"
futures = "0.3.8"
clap = "2.33.3"
url = "2.2.0"
tempfile = "3.2.0"
which = "4.2.2"
mime = "0.3.16"
