[package]
name = "reddsaver"
version = "0.4.0"
authors = ["Manoj Karthick Selva Kumar <manojkarthick@ymail.com>"]
description = "CLI tool to download saved media from Reddit"
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
homepage = "https://github.com/manojkarthick/reddsaver"
repository = "https://github.com/manojkarthick/reddsaver"
keywords = ["cli", "reddit", "images"]
categories = ["command-line-utilities"]

[dependencies]
reqwest = { version = "0.11.20", features = ["json"] }
tokio = { version = "1.32.0", features = ["full"] }
base64 = "0.21.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
md5 = "0.7.0"
thiserror = "1.0.22"
log = "0.4.11"
env_logger = "0.10.0"
futures = "0.3.8"
rand = "0.8.5"
random-names = "0.1.3"
clap = { version = "4.4.2", features = ["cargo"] }
url = "2.2.0"
tempfile = "3.2.0"
which = "4.2.2"
mime = "0.3.16"
