[package]
name = "reddsaver"
version = "1.0.0-rc6"
authors = ["Manoj Karthick Selva Kumar <manojkarthick@ymail.com>"]
description = "CLI tool to download saved media from Reddit"
edition = "2021"
license = "MIT/Apache-2.0"
readme = "README.md"
homepage = "https://github.com/manojkarthick/reddsaver"
repository = "https://github.com/manojkarthick/reddsaver"
keywords = ["cli", "reddit", "images"]
categories = ["command-line-utilities"]

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
md5 = "0.7.0"
thiserror = "1.0.22"
log = "0.4.11"
env_logger = "0.11"
futures = "0.3.8"
rand = "0.8"
random-names = "0.1.3"
clap = { version = "4", features = ["cargo", "derive"] }
url = "2.2.0"
tempfile = "3.2.0"
which = "4.2.2"
mime = "0.3.16"
lazy_static = "1.4.0"
regex = "1.5.4"
async_once = "0.2.6"
